Fixed a bug that caused buttons from the widget page editor to wrap to widgets.

--- a/layouts/bootstrap/css/edit.css
+++ b/layouts/bootstrap/css/edit.css
@@ -20,3 +20,7 @@ p.em {
     display: inline;
 }
 
+#zonePageContent {
+    margin-bottom: 1em;
+}
+
